gcc/testsuite/gm2/pim/fail/constvar.mod
MODULE constvar ;

VAR
   a: CARDINAL ;

CONST
   b = a ;

END constvar.
